<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="API_KEY">AIzaSyC7zkt102pGlWZn35gCygY5TKqZqu15vi4</string>
    <string name="app_name">Mapa De Meteritos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="classif">Classificação:</string>
    <string name="position">Posição:</string>
    <string name="mass">Massa recup.:</string>
    <string name="mass_mus">Massa no M.N.:</string>
    <string name="analysis">Análise:</string>
    <string name="fall">Queda:</string>
    <string name="found">Achado:</string>
    <string name="more_info">Mais informações:</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus nisi ut leo finibus fermentum. Morbi lacinia ultricies justo, eget interdum eros tempus sed. Fusce molestie vitae ligula at commodo. Donec luctus arcu dui, non efficitur justo sodales non. Suspendisse sodales, enim sit amet pretium accumsan, magna mauris efficitur turpis, sit amet ornare nulla dolor at lorem. Fusce sit amet nibh sed libero pulvinar interdum. Duis sed erat ut risus elementum dapibus. Pellentesque mauris lectus, sagittis in scelerisque ut, facilisis at enim. Donec hendrerit sollicitudin pellentesque. Quisque vel diam ut ante dapibus pellentesque. Cras non interdum sem. Cras sollicitudin venenatis ex, eget semper arcu facilisis vulputate. Praesent at ex nec urna mattis dictum. Cras finibus semper ultricies. Maecenas cursus semper enim, eget accumsan ex iaculis ut. Mauris lorem odio, rhoncus sed orci vel, commodo efficitur justo. Suspendisse eu nulla lacus. Mauris quis felis odio. Praesent in vehicula erat. Nunc quis tortor a mi iaculis auctor. Sed in urna ac risus maximus vehicula. Suspendisse potenti. Duis in rhoncus nunc, eget egestas mauris. Duis ac tortor et dui pharetra vestibulum ac ut lectus. Pellentesque consequat ipsum tellus. Etiam vel leo suscipit, aliquet dolor ac, eleifend massa. Quisque pharetra accumsan metus, sit amet finibus neque cursus quis. Praesent scelerisque ex ut nibh hendrerit, ut sagittis nisi aliquet. Nam gravida dolor nisl, quis sagittis arcu tincidunt id. Pellentesque eget tempor diam, quis molestie sem. Nunc vitae volutpat ligula, quis malesuada justo. Morbi fringilla commodo odio, a blandit ligula. Cras aliquam pellentesque massa porttitor molestie. Suspendisse sit amet imperdiet dui. Vestibulum pellentesque, libero nec varius aliquam, ante ante ultricies nunc, eget viverra orci mi vitae risus. Cras viverra tellus eget est viverra, quis tincidunt enim ullamcorper. In quis erat turpis. Cras sit amet turpis vel orci lobortis cursus. Etiam vel malesuada turpis.Pellentesque eu cursus purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla iaculis tempor tortor, eget euismod urna ornare id. Cras et viverra felis. Suspendisse auctor leo sed pulvinar vulputate. Nam imperdiet massa odio, at aliquet ante fringilla ac. Quisque vel eros a lectus sodales dignissim. Donec ac orci a massa tristique laoreet sit amet et magna. Maecenas vitae laoreet justo. Nullam tristique erat urna, pharetra volutpat mauris luctus id. Duis urna est, vehicula eget feugiat vitae, luctus eu nisi.Cras lacinia neque sed dolor sagittis venenatis. Proin a lacus massa. In tincidunt nibh nisi. Pellentesque mattis pretium egestas. Phasellus tincidunt ornare imperdiet. Donec eu mollis felis, eu suscipit magna. Mauris cursus purus et mollis interdum. Ut interdum scelerisque sem eu tempus. Nulla sed lacus quam. Aliquam eget dignissim leo, eu efficitur enim. Nulla quis ullamcorper lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse mi sapien, rutrum vel faucibus quis, aliquam ac massa. Ut interdum luctus neque, a luctus odio finibus nec.Aenean et nulla imperdiet, luctus dui a, ornare elit. Pellentesque molestie tortor vestibulum sapien convallis auctor. Vivamus quis libero leo. Maecenas viverra accumsan mi, et faucibus massa feugiat fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean risus tellus, mattis vitae sapien quis, auctor fringilla nisi. Aenean dictum nunc id sollicitudin pharetra.Morbi efficitur ultricies dignissim. Cras nisi diam, euismod vitae neque ut, malesuada varius neque. Donec a justo ultricies metus maximus dapibus. Praesent tincidunt lectus id ultrices tempor. Vestibulum lacinia enim a orci sodales gravida. Mauris ante arcu, lobortis eu arcu ac, fermentum rhoncus turpis. Praesent venenatis nisl non nulla interdum lacinia. Integer interdum nec tortor nec fringilla. Donec vel orci non ipsum lobortis pulvinar. Praesent eu odio quam. Etiam sed massa ac enim mollis tempus. Sed ultrices luctus massa, vel volutpat metus dictum sed. Phasellus vehicula metus massa, ut fringilla tellus vehicula at. Aliquam laoreet neque quis volutpat accumsan.Praesent eget imperdiet mauris. Vivamus diam quam, facilisis vel convallis id, condimentum quis lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempus facilisis sem vel vehicula. Curabitur a turpis tellus. Integer porta pulvinar sapien. Sed volutpat ornare lorem, vel rutrum mi fringilla vitae. Donec facilisis egestas velit, sit amet cursus velit aliquam quis. Mauris eget est sapien. Vivamus vehicula laoreet sem vitae auctor. Cras venenatis et risus eu dignissim. Ut lobortis in erat non semper. Nam tincidunt gravida odio id interdum. Integer sollicitudin euismod leo lacinia mattis.Pellentesque pulvinar augue odio, a scelerisque sem tristique at. In vel viverra eros. Cras mattis, lorem ac lacinia condimentum, leo eros mollis nulla, vitae lobortis quam dolor nec mi. Integer augue ante, blandit in nulla sit amet, vestibulum bibendum nibh. Sed in enim et lectus ornare consectetur. Maecenas id tempor erat. Curabitur blandit, lectus eget blandit rutrum, nunc nulla pharetra enim, eu dictum est lectus vitae justo.Suspendisse rutrum blandit ex et eleifend. Integer eget vulputate sapien, vitae bibendum dolor. Phasellus odio ex, convallis ut turpis sollicitudin, finibus pulvinar risus. Nam quis libero ante. Pellentesque condimentum libero vel suscipit vehicula. Integer egestas commodo est, nec finibus turpis sagittis vel. Vestibulum aliquam fringilla nulla, a suscipit ipsum dignissim vel. Aliquam mattis ut nunc in laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas sed lectus sed sapien egestas vestibulum ut ac turpis. Praesent iaculis felis ut odio tincidunt aliquet. Nulla ex nisi, tincidunt sit amet sagittis rutrum, laoreet id sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam viverra iaculis blandit.Curabitur efficitur velit nisi, at posuere eros dignissim at. In malesuada purus ex, sit amet lacinia tellus accumsan ut. Praesent ut venenatis augue. Quisque aliquet at dui quis eleifend. Mauris ut sodales ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed tincidunt elementum nibh at posuere.Ut ultrices metus eget sapien pulvinar, sed tempus sem tristique. Proin lacus turpis, accumsan id bibendum ut, tempus a erat. Phasellus vestibulum ipsum ex. Donec venenatis, lectus eget sodales congue, erat lectus dignissim est, id laoreet velit mauris a libero. Suspendisse potenti. Nulla quis sapien in augue tristique.</string>

</resources>
