<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="300dp"
    android:layout_marginRight="300dp"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    android:background="@drawable/dialog_background"
    android:padding="20dp" 
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/btCloseDialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@android:color/black"
                android:src="@drawable/abc_ic_clear_mtrl_alpha" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_box"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/ivDialog"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/meteorito" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_marginLeft="10dp" >

                <TextView
                    android:id="@+id/tvNameDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvClassDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text"
                    android:text="@string/classif" />

                <TextView
                    android:id="@+id/tvPositionDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text"
                    android:text="@string/position" />

                <TextView
                    android:id="@+id/tvFactDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/tvMassDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text"
                    android:text="@string/mass" />

                <TextView
                    android:id="@+id/tvAnalysisDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/small_text"
                    android:text="@string/analysis" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvInfoDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_text"
            android:scrollbars="vertical"
            android:textSize="@dimen/small_text"
            android:minLines="7"
            android:maxLines="14"
            android:layout_marginTop="15dp"
            android:padding="5dp" />
    </LinearLayout>

</ScrollView>