<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/tvDistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:layout_marginLeft="10dp"
                    android:textColor="#555"
                    android:text="TextView" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btCloseDialog"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/black"
                android:src="@drawable/abc_ic_clear_mtrl_alpha" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/dialog_box"
            android:padding="20dp" >

            <LinearLayout
                android:id="@+id/llImg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image101" />

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".66"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp" >

                <LinearLayout
                    android:id="@+id/llFact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:id="@+id/tvFactLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fall"
                        android:textSize="@dimen/small_medium_text" />

                    <TextView
                        android:id="@+id/tvFactData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="TextView"
                        android:textColor="#555"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/classif"
                        android:textSize="@dimen/small_medium_text" />

                    <TextView
                        android:id="@+id/tvClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="TextView"
                        android:textColor="#555"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mass"
                        android:textSize="@dimen/small_medium_text" />

                    <TextView
                        android:id="@+id/tvMass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="TextView"
                        android:textColor="#555"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMassMuseum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mass_mus"
                        android:textSize="@dimen/small_medium_text" />

                    <TextView
                        android:id="@+id/tvMassMuseum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="TextView"
                        android:textColor="#555"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llAnal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analysis"
                        android:textSize="@dimen/small_medium_text" />

                    <TextView
                        android:id="@+id/tvAnal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="TextView"
                        android:textColor="#555"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_info"
                        android:textSize="@dimen/small_medium_text" />

                    <TextView
                        android:id="@+id/tvInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/dialog_text"
                        android:padding="20dp"
                        android:scrollbars="vertical"
                        android:text="TextView"
                        android:textColor="#555"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>